# kira-organelle

./: .gitattributes  .gitignore  Cargo.toml  PIPELINE.md  README.md
.github/workflows/: ci.yml
benches/: cell_delta.rs  tsv_ingest.rs
docs/: FORMAL_MODEL.md  METRICS.md  PIPELINE.md  SCHEMA.md
src/: cli.rs  error.rs  fii.rs  integration_export.rs  lib.rs  logging.rs  main.rs  simd.rs  state.rs  stress_localization.rs  version.rs
src/cells/: join.rs  mod.rs  read.rs  types.rs
src/compare/: cells.rs  mod.rs  state.rs  types.rs
src/contracts/: mod.rs  read.rs  types.rs
src/interpret/: engine.rs  rules.rs  types.rs
src/io/: mod.rs
src/model/: extract.rs  mod.rs  organelle.rs
src/normalize/: global_robust.rs  mod.rs
src/registry/: composites.rs  metrics.rs  mod.rs  output_schema.rs
src/render/: format.rs  html.rs  llm.rs  mod.rs  (+1 more)
tests/: snapshot_minimal.rs  src_inline_run_exec.rs  src_inline_run_experiments.rs  src_inline_stress_localization.rs  stage0.rs  stage1.rs  stage10_state_dynamics.rs  stage11_report_phase.rs  stage12_decision.rs  stage13_decision_timeline.rs  stage14_commitment_asymmetry.rs  stage15_plasticity_reserve.rs  stage16_cross_organelle_coupling.rs  stage17_decision_concordance.rs  stage18_integration_export.rs  stage2.rs  stage3.rs  stage4.rs  stage5.rs  stage6.rs  stage7.rs  stage8_fii.rs  stage9_report_fii.rs  unit_binning.rs  unit_cai.rs  unit_cocs.rs  unit_cross_sample.rs  unit_dci.rs  unit_fii_weights.rs  unit_ili.rs  unit_integration_export.rs  unit_metric_registry.rs  unit_pri.rs  unit_run_exec_args.rs  unit_run_mod.rs
(+35 files in other folders)
